Спринт №16. исправление замечаний 3